force-app/main/default/objects/agrid__Configuration_Group__c/agrid__Configuration_Group__c.object-meta.xml
<CustomObject>
    <label>Configuration Group</label>
    <nameField>
        <displayFormat>Group-{0000}</displayFormat>
        <label>Configuration Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>