force-app/main/default/objects/agrid__Configuration_Group__c/fields/agrid__Active__c.field-meta.xml
<CustomField>
    <fullName>agrid__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>