force-app/main/default/objects/agrid__Configuration_Group__c/fields/agrid__Description__c.field-meta.xml
<CustomField>
    <fullName>agrid__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>