force-app/main/default/objects/agrid__Configuration_Group__c/fields/agrid__Title__c.field-meta.xml
<CustomField>
    <fullName>agrid__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>